--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,7 +63,14 @@ services:
     networks:
       - my-network
 
-
+  mailpit:
+    image: axllent/mailpit:latest
+    container_name: mailpit
+    ports:
+      - '${MAIL_PORT:-1025}:1025'
+      - '${FORWARD_MAILPIT_DASHBOARD_PORT:-8025}:8025'
+    networks:
+      - my-network
 
   nginx:
     image: nginx:alpine
